--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -13,6 +13,9 @@
     top: 0;
     height: 100vh;
     overflow-y: auto;
+
+    display: flex;
+    flex-direction: column;
 }
 
 .sidebar-title {
@@ -24,6 +27,7 @@
     display: flex;
     flex-direction: column;
     gap: 8px;
+    flex: 1;
 }
 
 .nav-link {
